<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.weather.sanjay.myapplication.MainActivity"
    tools:showIn="@layout/activity_mainactivity">

    <TextView
        android:id="@+id/weather_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/weather_heading"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/street_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/weather_heading"
        android:layout_marginTop="40dp"
        android:text="@string/street_id"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/street_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/street_id"
        android:layout_alignEnd="@+id/city_val"
        android:layout_alignStart="@+id/city_val"
        android:inputType="text" />

    <TextView
        android:id="@+id/city_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/city_val"
        android:layout_alignParentStart="true"
        android:text="@string/city_id"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/city_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/street_val"
        android:layout_toEndOf="@+id/submit"
        android:inputType="text" />

    <Spinner
        android:id="@+id/state_val"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/city_val"
        android:layout_below="@+id/city_val"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/deg_id"
        android:clickable="true"
        android:entries="@array/state_arrays"
        android:prompt="@string/state_select" />

    <TextView
        android:id="@+id/deg_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/deg_id"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/abt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/abt" />

    <ImageView
        android:id="@+id/forecast_img_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/abt"
        android:layout_alignEnd="@+id/radioGroup"
        android:layout_alignTop="@+id/abt"
        android:layout_toEndOf="@+id/reset"
        android:clickable="true"
        android:contentDescription="@string/forecast_img"
        android:src="@drawable/forecast_logo" />

    <TextView
        android:id="@+id/pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forecast_img_id"
        android:layout_alignEnd="@+id/forecast_img_id"
        android:text="@string/pwd"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/error_id"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_below="@+id/reset"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:inputType="text"
        android:text=""
        android:textAlignment="center"
        android:textColor="#ea1616" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="27dp"
        android:background="#fbfbfb"
        android:text="@string/submit"
        android:textSize="18sp" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/radioGroup"
        android:layout_alignTop="@+id/submit"
        android:background="#fbfbfb"
        android:text="@string/reset"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/deg_id"
        android:layout_alignEnd="@+id/state_val"
        android:buttonTint="@color/mycolor"
        android:checked="true"
        android:orientation="horizontal"
        android:text="@string/radioDeg"
        android:textSize="20sp">

        <RadioButton
            android:id="@+id/radioDeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/mycolor"
            android:checked="true"
            android:text="@string/radioDeg"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioDeg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/mycolor"
            android:checked="false"
            android:text="@string/radiodeg1"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/state_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/state_val"
        android:layout_alignParentStart="true"
        android:text="@string/state_id"
        android:textAppearance="?android:attr/textAppearanceLarge" />


</RelativeLayout>
