<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.weather.sanjay.myapplication.ResultActivity"
    tools:showIn="@layout/activity_resultactivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/mdetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mdetails" />

                <Button
                    android:id="@+id/vmap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vmap" />

                <ImageView
                    android:id="@+id/fb"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:clickable="true"
                    android:paddingLeft="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/fb" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/currentimage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/currentimage"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/summary_ResultActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text=""
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/temp_ResultActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="35sp" />

                <TextView
                    android:id="@+id/lohi_ResultActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="25sp" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:stretchColumns="0,1"
                    android:transitionGroup="true"

                    >

                    <TableRow android:layout_margin="10dp">

                        <TextView
                            android:id="@+id/precip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/precip"
                            android:textAlignment="textStart"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/precip_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </TableRow>

                    <TableRow android:layout_margin="10dp">

                        <TextView
                            android:id="@+id/crain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/crain"
                            android:textAlignment="textStart"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/crain_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </TableRow>

                    <TableRow android:layout_margin="10dp">

                        <TextView
                            android:id="@+id/wspeed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wspeed"
                            android:textAlignment="textStart"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/wspeed_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </TableRow>

                    <TableRow android:layout_margin="10dp">

                        <TextView
                            android:id="@+id/dpoint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/spoint"
                            android:textAlignment="textStart"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/dpoint_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </TableRow>

                    <TableRow android:layout_margin="10dp">

                        <TextView
                            android:id="@+id/humid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humid"
                            android:textAlignment="textStart"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/humid_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </TableRow>

                    <TableRow android:layout_margin="10dp">

                        <TextView
                            android:id="@+id/vis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vis"
                            android:textAlignment="textStart"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/vis_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </TableRow>

                    <TableRow android:layout_margin="10dp">

                        <TextView
                            android:id="@+id/srise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/srise"
                            android:textAlignment="textStart"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/srise_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </TableRow>

                    <TableRow android:layout_margin="10dp">

                        <TextView
                            android:id="@+id/sset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sset"
                            android:textAlignment="textStart"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/sset_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
